# fix-client-python

./: README.md  pyproject.toml
examples/threaded_workflow/: FIX44.xml  config.cfg  run.py
fix_client/: __init__.py  app.py  lib.py  order.py
resources/: FIX44.xml  template.cfg
